fix: account switcher width on mobile

--- a/src/components/layout/header/account-switcher.scss
+++ b/src/components/layout/header/account-switcher.scss
@@ -10,6 +10,7 @@
     height: 100%;
     justify-content: center;
     padding: 0 1.6rem 0 1.7rem;
+    width: max-content;
 
     &__preloader {
         position: absolute;
@@ -267,11 +268,6 @@
         border-radius: $BORDER_RADIUS;
         position: absolute;
         z-index: 3;
-
-        @include tablet-screen {
-            position: unset;
-        }
-
         transition:
             transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
             opacity 0.25s linear;
@@ -280,6 +276,10 @@
         top: calc(100% + 4px);
         width: 320px;
         background-color: var(--general-main-2);
+
+        @include tablet-screen {
+            position: unset;
+        }
 
         &--wallets {
             width: 32rem;
